--- a/pom.xml
+++ b/pom.xml
@@ -113,10 +113,10 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<start-class>com.restcalculator.app.app</start-class>
 		
-		
-		<sonar.projectKey>eidermauricio_restcalculator</sonar.projectKey>
-		<sonar.organization>eidermauricio</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.login>594e80b4479b4397cafbc4c6659d000a6d45e109</sonar.login>
+                <sonar.projectKey>restcalculator</sonar.projectKey>
+                <sonar.organization>sriveral</sonar.organization>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.login>7cd102c6efd8a54542c62031d5024e5e08fc3358</sonar.login>
+
 	</properties>
 </project>
